--- a/src/main/resources/templates/teacher/class.html
+++ b/src/main/resources/templates/teacher/class.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="/teacher/css/style.css" />
 		<title>我的课程</title>
 	</head>
 	<body>
