--- a/src/main/resources/templates/student/information.html
+++ b/src/main/resources/templates/student/information.html
@@ -86,7 +86,7 @@ document.getElementById("introduction").value=null;
 <!--顶部标题栏-->
 <div class="header">
     <img class="img-logo" src="/img/logo.png" />
-    <img class="head" src="/img/字体设计.png" />
+    <a href="/student/index"><img class="head" src="/img/字体设计.png" /></a>
     <a  class="nav1">我的学习</a>
     <a  class="nav2">消息</a>
 </div>
