--- a/src/main/resources/templates/student/myStudy.html
+++ b/src/main/resources/templates/student/myStudy.html
@@ -6,28 +6,68 @@
 <script src="/js/jquery.isotope.min.js"></script>
 <script src="/js/jquery.inview.min.js"></script>
 <script src="/js/cookie3.js"></script>
+<script>
+		window.onload=function(){
+		document.getElementById('mystudyMission').style.display='none';
+        document.getElementById('mystudyTraining').style.display='none';
+        document.getElementById('mystudyMistake').style.display='none';
+        document.getElementById('mystudyCicle').style.display='none';
+        document.getElementById('myStudyClass').style.display='block';
+        document.getElementById('mystudyAbility').style.display='none';
+		str="";
+		if(getCookie("identification")==1)
+		{str2="我的课程";}
+		else if(getCookie("identification")==3)
+		{str2="我的学校";}
+		else
+		{str2="我的学习";}
+		str=str+"<img class=\"img-logo\" src=\"/img/logo.png\" /> <a href=\"/student/index\"><img class=\"head\" src=\"/img/字体设计.png\" /></a><a  onclick=\"joinStudy()\" class=\"nav1\">"+str2+"</a><a onclick=\"joinMessage()\" class=\"nav2\">消息</a>";
+		 if(getCookie("userID")==null)  str=str+"<a href=\"/student/login\" class=\"nav3\">登录/注册</a><img id=\"icon\" src=\"/img/头像.png\" />";
+        else        str=str+"<a class=\"nav3\">"+getCookie("name")+"</a><img id=\"icon\" src=\"/img/头像1.png\" /><a onclick=\"exituser()\" class=\"nav3\">退出登录</a>";
+        $("#header").html(str);
+    }
+    function exituser()
+    {
+     delCookie("name");
+     delCookie("userID");
+     delCookie("sex");
+     delCookie("schoolID");
+     delCookie("identification");
+     window.location.href="/student/login";
+    }
+     function joinStudy()
+   {
+   var userID=getCookie("userID");
+   if(userID==null){alert("请先登录!");}
+   else
+   {
+   window.location.href="/student/myStudy";}
+   }
+      function joinMessage()
+   {
+   var userID=getCookie("userID");
+   if(userID==null){alert("请先登录!");}
+   else
+   {
+   window.location.href="/student/message";}
+   }
+	</script>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="/css/style.css" />
 		<title>我的学习</title>
 	</head>
 	<body>
 	<div class="container">
 		<!--顶部标题栏-->
-		<div class="header">
-			<img class="img-logo" src="img/logo.png" />
-			<a href="/student/index"><img class="head" src="img/字体设计.png" /></a>
-		     <a  href="myStudy.html" class="nav1">我的学习</a>
-		        <a href="message.html" class="nav2">消息</a>
-		        <a href="login.html" class="nav3">登录/注册</a>
-            <img id="icon" src="img/头像.png" />     
+		<div class="header" id="header">
 		</div>
 		<!--我的学习背景-->
 		<div class="myBg">
-			<img src="img/头像.png" class="myImg" />
+			<img src="/img/头像.png" class="myImg" />
 			<h2 class="myh1">学习本无底，前进莫徬徨</h2>
 			<p class="morning">早上好！</p>
-		</div> 
+		</div>
 		<!--导航栏-->
 		<div class="navigation">
 			<button type="button" id="myClass" autofocus="autofocus">我的课程</button>
@@ -45,7 +85,7 @@
 				<button type="button" id="myStudyEnd" >已结束</button>
 			<div class="mystudyClasses">
 			<div class="class1">
-	    	<a href="classContent.html"><img class="classPicture" src="img/logo.png"></a>
+	    	<a href="classContent.html"><img class="classPicture" src="/img/logo.png"></a>
 	    	<div class="classHeader">
 	    		<a href="classContent.html"><span class="classHeader"></span></a>
 	    	</div>
@@ -57,7 +97,7 @@
 	    	</div>
 	        </div>
 	        <div class="class1">
-	    	<a href="classContent.html"><img class="classPicture" src="img/logo.png"></a>
+	    	<a href="classContent.html"><img class="classPicture" src="/img/logo.png"></a>
 	    	<div class="classHeader">
 	    		<a href="classContent.html"><span class="classHeader"></span></a>
 	    	</div>
@@ -119,8 +159,8 @@
         
 		<!--页脚-->
 	    <div class="footer">
-	    	<img class="img-logo" src="img/logo.png" />
-			<img class="head" src="img/字体设计.png" />
+	    	<img class="img-logo" src="/img/logo.png" />
+			<img class="head" src="/img/字体设计.png" />
 			<div class="introduction">
 				<p>文思海辉技术有限公司旗下实用技能学习平台。与专业机构、院校合作。为您提供海量优质课堂，以及创新的在线学习体验，帮助您获得全新的个人发展和能力提升。</p>
 			</div>
@@ -182,16 +222,6 @@
         	document.getElementById('mystudyTraining').style.display='none';
         	document.getElementById('mystudyAbility').style.display='block';
         }
-	</script>
-	<script>
-		window.onload=function(){
-		 document.getElementById('mystudyMission').style.display='none';
-            document.getElementById('mystudyTraining').style.display='none';
-            document.getElementById('mystudyMistake').style.display='none';
-            document.getElementById('mystudyCicle').style.display='none';
-            document.getElementById('myStudyClass').style.display='block';
-            document.getElementById('mystudyAbility').style.display='none';
-    }
 	</script>
 	</body>
 </html>
