--- a/src/main/resources/templates/student/circleComment.html
+++ b/src/main/resources/templates/student/circleComment.html
@@ -122,6 +122,8 @@
 	window.location.href="/student/alumniCircle";
 	if(getCookie("type")==3)
 	window.location.href="/student/message";
+	if(getCookie("type")==4)
+	window.location.href="/student/myStudy";
 	}
 </script>
 	<head>
